populate ids in related tables

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 DATABASE=mongodb+srv://gauravshresthh:uy0fr8Ksu1mPz3IT@hamro-service.rfhsz.mongodb.net/hamroService?retryWrites=true&w=majority
 JWT_EXPIRES_IN=90d
