--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"nodemon": "^2.0.15",
 		"sharp": "^0.29.2",
 		"slugify": "^1.6.2",
+		"socket.io": "^4.4.0",
 		"twilio": "^3.71.1",
 		"validator": "^13.7.0",
 		"xss-clean": "^0.1.1"
