--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"start": "node server.js",
 		"dev": "nodemon server.js",
-		"prod": "NODE_ENV=production node server.js"
+		"prod": "NODE_ENV=production node server.js",
+		"docker_redis":"docker run --name redis-local -p 6379:6379 -d redis"
 	},
 	"keywords": [],
 	"author": "Gaurav Shrestha",
@@ -15,6 +16,7 @@
 	"dependencies": {
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.1",
+		"bull": "^4.5.0",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"creditcard-generator": "^0.0.7",
