--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ SENDGRID_EMAIL_USERNAME=apikey
 SENDGRID_EMAIL_PASSWORD=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
 TWILIO_ACCOUNT_SID='AC0b9204896a3f134a628c50ba8f05094b'
 TWILIO_AUTH_TOKEN='d805a6b820f487d6bf1813a11dd9a7e6'
-GMAIL_USERNAME='gauravshresthh@gmail.com'
-GMAIL_PASSWORD='pikachhu@9816947062'
+GMAIL_USERNAME=''
+GMAIL_PASSWORD=''
