chatGPT integrated: baby phase

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ TWILIO_ACCOUNT_SID='AC0b9204896a3f134a628c50ba8f05094b'
 TWILIO_AUTH_TOKEN='d805a6b820f487d6bf1813a11dd9a7e6'
 GMAIL_USERNAME=''
 GMAIL_PASSWORD=''
+OPENAI_API_KEY="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"
