--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"multer": "^1.4.3",
 		"nodemailer": "^6.7.0",
 		"nodemon": "^2.0.15",
+		"openai": "^3.1.0",
 		"sharp": "^0.29.2",
 		"slugify": "^1.6.2",
 		"socket.io": "^4.4.0",
